@@ -1,5 +1,5 @@
 name := "ccc"
-scalaVersion := "2.12.6"
+scalaVersion := "2.12.7"
 
 fork := true
 
@@ -8,8 +8,24 @@ scalacOptions in (Compile, console) --= Seq("-Ywarn-unused:_", "-opt:_", "-Xlint
 
 resolvers += "jcenter bintray" at "http://jcenter.bintray.com"
 
+dependsOn(RootProject(file("../tangerine")))
+
+lazy val jfxVersion = "11"
+lazy val jfxClassifier = settingKey[String]("jfxClassifier")
+jfxClassifier := {
+  if (scala.util.Properties.isWin) "win"
+  else if (scala.util.Properties.isLinux) "linux"
+  else if (scala.util.Properties.isMac) "mac"
+  else throw new IllegalStateException(s"Unknown OS: ${scala.util.Properties.osName}")
+}
 libraryDependencies ++= Seq(
-  "com.github.pathikrit" %% "better-files" % "3.4.0",
+  "org.openjfx" % "javafx-graphics" % jfxVersion classifier jfxClassifier.value,
+  "org.openjfx" % "javafx-controls" % jfxVersion classifier jfxClassifier.value,
+  "org.openjfx" % "javafx-base" % jfxVersion classifier jfxClassifier.value,
+  "org.openjfx" % "javafx-fxml" % jfxVersion classifier jfxClassifier.value,
+  "org.openjfx" % "javafx-web" % jfxVersion classifier jfxClassifier.value,
+  "org.openjfx" % "javafx-media" % jfxVersion classifier jfxClassifier.value,
+  "com.github.pathikrit" %% "better-files" % "3.6.0",
   "com.atlassian.commonmark" % "commonmark" % "0.11.0",
   "com.atlassian.commonmark" % "commonmark-ext-autolink" % "0.11.0",
   "com.atlassian.commonmark" % "commonmark-ext-gfm-strikethrough" % "0.11.0",
@@ -18,6 +34,22 @@ libraryDependencies ++= Seq(
   "uk.co.caprica" % "vlcj" % "3.10.1",
 )
 
-mainClass in reStart := Some("ccc.DevAppReloader")
+javaOptions ++= {
+  val attributedJars = (Compile/dependencyClasspathAsJars).value.filterNot(_.metadata.get(moduleID.key).exists(_.organization == "org.scala-lang"))
+  val modules = attributedJars.flatMap { aj =>
+    try {
+      val module = java.lang.module.ModuleFinder.of(aj.data.toPath).findAll().iterator.next.descriptor
+      Some(aj -> module)
+    } catch { case _: java.lang.module.FindException => None }
+  }
+  Seq(
+    "--add-modules=" + modules.map(_._2.name).mkString(","),
+    "--module-path=" + modules.map(_._1.data.getAbsolutePath).mkString(java.io.File.pathSeparator)
+  )
+}
 
-//javaOptions in run ++= Seq("--patch-module", "javafx.controls=target/scala-2.12/classes")
+(reStart/mainClass) := Some("tangerine.DevAppReloader")
+(reStart/javaOptions) ++= Seq(
+  "--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED",
+  "--add-opens=javafx.graphics/javafx.scene.image=ALL-UNNAMED",
+)
